# agent-framework-python-playground

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  plan.md  pyproject.toml
.github/workflows/: pages.yml
docs/: agent-skills.md  background-responses.md  basic.md  custom-agents.md  hosting.md  index.md  memory.md  multi-agent.md  multi-turn.md  streaming.md  structured-output.md  tool-use.md  workflow-errors.md  workflow.md
docs/a2a/: index.md
docs/agents/: agent-pipeline.md  agent-safety.md  agent-skills.md  background-responses.md  context-providers.md  declarative-agents.md  multimodal.md  observability.md  overview.md  rag.md  running-agents.md  session.md  structured-output.md
docs/agents/memory/: compaction.md  index.md  storage.md
docs/agents/middleware/: agent-vs-run-scope.md  chat-level.md  defining.md  exception-handling.md  index.md  result-overrides.md  runtime-context.md  shared-state.md  termination.md
docs/agents/tools/: code-interpreter.md  (+7 more)
docs/workflow/: agents-in-workflows.md  checkpoints.md  declarative.md  edges.md  events.md  executors.md  human-in-the-loop.md  observability.md  state.md  visualization.md  workflows-as-agents.md
examples/a2a/: README.md
examples/agent_skills/: main.py
examples/background_responses/: main.py
examples/basic/: main.py
examples/custom_agents/: main.py
examples/hosting/: main.py
examples/memory/: main.py
examples/multi_agent/: main.py
examples/multi_turn/: main.py
examples/streaming/: main.py
examples/structured_output/: main.py
examples/tool_use/: main.py
examples/workflow/: main.py
(+38 files in other folders)
